--- a/views/tmpl/admin/user/user-profile.html
+++ b/views/tmpl/admin/user/user-profile.html
@@ -116,7 +116,7 @@
 				<section class="tile tile-simple"> 
 					<div class="tile-body">
 						<h2 class="custom-font mt-0">Description</h2>
-						<p class="text-default lt">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p> 
+						<p class="text-default lt">{{userData.user_description}}</p> 
 					</div> 
 				</section> 
 			</div>
@@ -345,7 +345,7 @@
 																<label for="">Code</label>
 															</div>
 															<div class="col-md-8">
-																<input type="text" class="form-control w-md" id="" value="xxxxxx-xx">
+																<input type="text" class="form-control w-md" id="" value="xxxxxx-xx" name="nfc_code" ng-model="editUser.nfc_code">
 															</div>
 														</div>
 														<div class="row">
@@ -354,8 +354,8 @@
 															</div>
 															<div class="col-md-8">
 																<div class="btn-group btnrounded status" ng-controller="ActivebtnCtrl">
-																	<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Active'">Active</label>
-																	<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Inactive'">Inactive</label>
+																	<label class="btn btn-default" ng-model="editUser.nfc_code_status" uib-btn-radio="1">Active</label>
+																	<label class="btn btn-default" ng-model="editUser.nfc_code_status" uib-btn-radio="0">Inactive</label>
 																</div>
 															</div>
 														</div>
@@ -371,6 +371,7 @@
 											</div>
 											<div class="form-group row mt-40">
 												<div class="col-sm-6">
+													<span class="error">{{EditRFIDCodeMsg}}</span>
 													<form ng-submit="submitEditRFIDCode(editUser, rfid_form)" name="rfid_form" ng-validate="validationOptions" >
 														<div class="form-group greenseatx"><strong>RFID Code</strong></div>
 														<div class="row">
@@ -378,7 +379,7 @@
 																<label for="">Card Number</label>
 															</div>
 															<div class="col-md-8">
-																<input type="text" class="form-control w-md" id="" value="xxxxxx-xx">
+																<input type="text" class="form-control number" ng-keypress="onlyNumber($event)" id="" ng-model="editUser.rfid_card_no" name="rfid_card_no" required>
 															</div>
 														</div>
 														<div class="row">
@@ -386,7 +387,7 @@
 																<label for="">Facility Code</label>
 															</div>
 															<div class="col-md-8">
-																<input type="text" class="form-control w-md" id="" value="xxxxxx-xx">
+																<input type="text" class="form-control number" id="" ng-keypress="onlyNumber($event)" ng-model="editUser.rfid_facility_code" name="rfid_facility_code" required>
 															</div>
 														</div>
 														<div class="row">
@@ -395,8 +396,8 @@
 															</div>
 															<div class="col-md-8">
 																<div class="btn-group btnrounded status" ng-controller="ActivebtnCtrl">
-																	<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Active'">Active</label>
-																	<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Inactive'">Inactive</label>
+																	<label class="btn btn-default" ng-model="editUser.rfid_status" uib-btn-radio="1">Active</label>
+																	<label class="btn btn-default" ng-model="editUser.rfid_status" uib-btn-radio="0">Inactive</label>
 																</div>
 															</div>
 														</div>
