--- a/styles/vxgplayer.css
+++ b/styles/vxgplayer.css
@@ -5,7 +5,8 @@
 	/* border: 2px #009FE3 solid; */
 	/*box-shadow: 0 0 10px rgba(160,206,78,1);*/
 	/* box-shadow: 0px 0px 10px rgba(0,0,0,1); */
-	margin: 10px;
+	/*margin: 10px;*/
+	width: 100%!important;
 }
 
 .vxgplayer:-webkit-full-screen{
