--- a/elika-warehouse/views/tmpl/administrator/master-admin-profile.html
+++ b/elika-warehouse/views/tmpl/administrator/master-admin-profile.html
@@ -115,7 +115,7 @@
 											</div>
 											<div class="col-sm-6 col-md-6">				
 												<label for="">Phone <span class="text-danger">*</span></label>
-												<input type="text" name="" id="" class="form-control" ng-model="userData.user_phone_no">
+												<input type="text" name="" ui-mask="{{'999 999 9999'}}" id="" class="form-control" ng-model="userData.user_phone_no">
 											</div>
 										</div>
 										
