--- a/elika-warehouse/views/tmpl/administrator/master-admin.html
+++ b/elika-warehouse/views/tmpl/administrator/master-admin.html
@@ -84,7 +84,7 @@
 												<div class="col-sm-6 col-md-6">				
 													<label for="">Phone <span class="text-danger">*</span></label>
 												<!-- <input type="text" name="phone" id="" class="form-control" ng-model="master.phone" ui-mask="{{'999 999 9999'}}" required="" ui-mask-placeholder-char="space"> -->
-												<input type="text" name="phone" id="" class="form-control" ng-model="master.phone"  required />
+												<input type="text" name="phone1" id="" ui-mask="{{'999 999 9999'}}" class="form-control" ng-model="master.phone"  required />
 												</div>
 											</div>
 											<div class="form-group row">
