--- a/styles/custom.css
+++ b/styles/custom.css
@@ -901,8 +901,8 @@ a.serplan:hover {
 	display: block;
 	line-height: normal;
 	position: relative;
-	text-overflow: ellipsis;
-	white-space: nowrap;
+	/*text-overflow: ellipsis;
+	white-space: nowrap;*/
 	overflow: hidden;
 	margin: 0 auto;
 	width: 415px;
@@ -910,7 +910,7 @@ a.serplan:hover {
 
 .covertext .facility_name_location span.facility_name {   
 	font-size: 28px;
-    height: 32px;
+    min-height: 32px;
     margin-bottom: 10px;
     font-weight: 500;
     text-transform: uppercase;
